--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,11 @@
 	<classpathentry kind="lib" path="src/sqljdbc4.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Bruger/.p2/pool/plugins/org.junit_4.13.0.v20200204-1500.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://junit.org/junit4/javadoc/latest/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Bruger/.p2/pool/plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
